--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="currency_symbol">$</string>
+    <string name="seccion_contactos">Contactos</string>
+    <string name="orders">Orders</string>
 </resources>
